<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ListedMeals.View.ListedMealsActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favouriteMealsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchFavourites" />

    <TextView
        android:id="@+id/guest_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="61dp"
        android:text="@string/guest_message_fav"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/guest_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="308dp"
        android:text="@string/login"
        android:textColor="@color/myColorBackground"
        app:backgroundTint="@color/myColorSurface"
        app:layout_constraintEnd_toEndOf="@+id/guest_message"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guest_message"
        app:layout_constraintTop_toBottomOf="@+id/guest_message" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/mealPlanGroup"
        android:layout_width="20dp"
        android:layout_height="14dp"
        app:constraint_referenced_ids="guest_message, guest_btn"
        />

    <SearchView
        android:id="@+id/searchFavourites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backupBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:text="@string/back_up"
        android:textColor="@color/myColorBackground"
        app:backgroundTint="@color/myColorSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/syncBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sync"
        android:textColor="@color/myColorBackground"
        app:backgroundTint="@color/myColorSurface"
        app:layout_constraintBottom_toTopOf="@+id/searchFavourites"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>