<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="16dp">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/myColorSurface"
        app:srcCompat="@drawable/baseline_logout_24"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchbyingredients"
        android:textColor="@color/myColorPrimaryVariant"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchbycategory"
        android:textColor="@color/myColorPrimaryVariant"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchbyarea"
        android:textColor="@color/myColorPrimaryVariant"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
        android:id="@+id/sp_provinces"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:spinnerMode="dropdown"
        app:smsp_floatingLabelColor="@color/myColorOnSecondary"
        app:smsp_floatingLabelText="Floating Label Text"
        app:smsp_hint="Hint Text"
        app:smsp_hintColor="@color/myColorSecondaryText"
        app:smsp_isSearchable="true"
        app:smsp_itemColor="@color/black"
        app:smsp_itemListColor="@color/black"
        app:smsp_itemListHintBackgroundColor="@color/myColorBackground"
        app:smsp_itemListHintColor="#FFFFFF"
        app:smsp_multilineError="false"
        app:smsp_selectedItemListColor="@color/black" />

</LinearLayout>
